Finishing FLPSO-SGD code to work with MNIST and balanced data divided between five clients.

--- a/FL-DP-PSO-SGD/FLPSO_SGD_DP_Clients_gradient_clipping_balanced.ipynb
+++ b/FL-DP-PSO-SGD/FLPSO_SGD_DP_Clients_gradient_clipping_balanced.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMc0/OvTqqlF4cnqp1/w62I",
+      "authorship_tag": "ABX9TyNwSShPR0aGD6hraVwEXb9r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "PWeMQ_EIv5_H"
       },
@@ -50,7 +50,8 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "import math\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "from collections import OrderedDict"
       ]
     },
     {
@@ -81,7 +82,7 @@
       "metadata": {
         "id": "lxvVKtTJwHKR"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,9 +111,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c974fa78-66ed-4abe-af3f-dcb123d0f1d0"
+        "outputId": "10e8e1de-104c-4d66-ff70-8126775652af"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,6 +248,7 @@
         "            cliente.treinar_com_pso(INERCIA, C1, C2, melhor_peso_global, criterio)  # Treino com PSO\n",
         "            cliente.refinar_com_adam(criterio, EPSILON, DELTA, MAX_NORM, SENSITIVITY)  # Refinamento com Adam\n",
         "            erro_cliente = cliente.melhor_particula.melhor_erro  # Obtém o melhor erro do cliente\n",
+        "            pesos_cliente = cliente.melhor_particula.melhor_erro  # Obtém os pesos do modelo do cliente\n",
         "            resultados_rodada.append((cliente.cliente_id, erro_cliente))\n",
         "\n",
         "        resultados_sorted = sorted(resultados_rodada, key=lambda x: x[1])\n",
@@ -264,7 +266,7 @@
         "        test_loss, test_accuracy = avaliar_modelo(modelo_global, criterio, testloader)\n",
         "\n",
         "        # if (rodada+1) % 10 == 0:\n",
-        "        print(f\"Rodada {rodada+1}/{num_rodadas}: Cliente {melhor_cliente_id} enviou os pesos.\")\n",
+        "        print(f\"Rodada {rodada+1}/{num_rodadas}:\")\n",
         "        print(f\"Erro Global Atualizado: {melhor_erro_global:.4f}\")\n",
         "        print(f\"Teste -> Perda: {test_loss:.4f}, Acurácia: {test_accuracy:.2f}%\\n\")\n",
         "\n",
@@ -291,7 +293,6 @@
         "    test_accuracy = (correct / total_samples) * 100\n",
         "\n",
         "    return test_loss, test_accuracy\n",
-        "\n",
         "\n",
         "mnist_train = torchvision.datasets.MNIST(root='./data', train=True, download=True)\n",
         "X_train = mnist_train.data.view(-1, 28*28).numpy()  # Flatten (Transforma 28x28 em 784)\n",
@@ -363,53 +364,53 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe35c95f-edf6-4250-9aa2-4229adf1a48e"
+        "outputId": "24be3317-8818-420a-fae8-c93665020d86"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Rodada 1/10: Cliente 1 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.3405\n",
-            "Teste -> Perda: 0.2938, Acurácia: 96.13%\n",
+            "Rodada 1/10:\n",
+            "Erro Global Atualizado: 0.3697\n",
+            "Teste -> Perda: 0.3190, Acurácia: 95.73%\n",
             "\n",
-            "Rodada 2/10: Cliente 4 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.0887\n",
-            "Teste -> Perda: 0.3326, Acurácia: 95.49%\n",
+            "Rodada 2/10:\n",
+            "Erro Global Atualizado: 0.0670\n",
+            "Teste -> Perda: 0.2829, Acurácia: 96.09%\n",
             "\n",
-            "Rodada 3/10: Cliente 4 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.0444\n",
-            "Teste -> Perda: 0.2961, Acurácia: 95.88%\n",
+            "Rodada 3/10:\n",
+            "Erro Global Atualizado: 0.0343\n",
+            "Teste -> Perda: 0.3478, Acurácia: 95.71%\n",
             "\n",
-            "Rodada 4/10: Cliente 1 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.0558\n",
-            "Teste -> Perda: 0.3360, Acurácia: 95.98%\n",
+            "Rodada 4/10:\n",
+            "Erro Global Atualizado: 0.0545\n",
+            "Teste -> Perda: 0.3320, Acurácia: 95.86%\n",
             "\n",
-            "Rodada 5/10: Cliente 4 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.0260\n",
-            "Teste -> Perda: 0.2989, Acurácia: 96.19%\n",
+            "Rodada 5/10:\n",
+            "Erro Global Atualizado: 0.0192\n",
+            "Teste -> Perda: 0.4430, Acurácia: 94.79%\n",
             "\n",
-            "Rodada 6/10: Cliente 3 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.1240\n",
-            "Teste -> Perda: 0.2655, Acurácia: 96.63%\n",
+            "Rodada 6/10:\n",
+            "Erro Global Atualizado: 0.0714\n",
+            "Teste -> Perda: 0.3295, Acurácia: 96.09%\n",
             "\n",
-            "Rodada 7/10: Cliente 3 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.0326\n",
-            "Teste -> Perda: 0.4163, Acurácia: 95.95%\n",
+            "Rodada 7/10:\n",
+            "Erro Global Atualizado: 0.0310\n",
+            "Teste -> Perda: 0.4105, Acurácia: 95.86%\n",
             "\n",
-            "Rodada 8/10: Cliente 4 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.0260\n",
-            "Teste -> Perda: 0.3791, Acurácia: 96.41%\n",
+            "Rodada 8/10:\n",
+            "Erro Global Atualizado: 0.0192\n",
+            "Teste -> Perda: 0.4231, Acurácia: 95.79%\n",
             "\n",
-            "Rodada 9/10: Cliente 3 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.0303\n",
-            "Teste -> Perda: 0.3293, Acurácia: 95.82%\n",
+            "Rodada 9/10:\n",
+            "Erro Global Atualizado: 0.0282\n",
+            "Teste -> Perda: 0.4701, Acurácia: 95.55%\n",
             "\n",
-            "Rodada 10/10: Cliente 3 enviou os pesos.\n",
-            "Erro Global Atualizado: 0.0303\n",
-            "Teste -> Perda: 0.3707, Acurácia: 96.34%\n",
+            "Rodada 10/10:\n",
+            "Erro Global Atualizado: 0.0282\n",
+            "Teste -> Perda: 0.6147, Acurácia: 95.35%\n",
             "\n",
             "Treinamento Federado Finalizado!\n"
           ]
